styles/edit_robots.css
#mmrpg,
#prototype {
  margin: 0;
  padding: 0;
  background-color: transparent;
  width: 762px;
}
#mmrpg.windowFlag_landscapeMode,
#mmrpg.mobileFlag_landscapeMode,
#mmrpg.windowFlag_landscapeMode #prototype,
#mmrpg.mobileFlag_landscapeMode #prototype {
  width: 1024px;
}
#edit .header {
  width: 100%;
}
#edit #canvas,
#edit #canvas .robot_canvas,
#edit #canvas .ability_canvas,
#edit #canvas .item_canvas {
  display: block;
  float: none;
  margin: 0 auto 2px;
  height: auto;
  width: 100%;
  color: #FFFFFF;
  overflow: hidden;     
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#edit #canvas .robot_canvas,
#edit #canvas .ability_canvas,
#edit #canvas .item_canvas {
  
}
#edit #canvas .robot_canvas.hidden,
#edit #canvas .ability_canvas.hidden,
#edit #canvas .item_canvas.hidden {
  display: none;
}
#edit td.canvas {
  vertical-align: top; 
  overflow: hidden; 
  height: auto; 
  min-height: 0;
}
#edit #canvas .robot_canvas table.links,
#edit #canvas .ability_canvas div.links,
#edit #canvas .item_canvas div.links {
  width: 100%;
}
#edit #canvas .robot_canvas table.links td,
#edit #canvas .ability_canvas div.links a,
#edit #canvas .item_canvas div.links a {
  vertical-align: top;
}
#edit #canvas .wrapper {
  display: block;
  float: left;
  position: relative;
  border: 1px solid #1A1A1A !important;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  background-color: #222222;
  background-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    color-stop(0, rgba(0, 0, 0, 0.05)),
    color-stop(1, rgba(255, 255, 255, 0.05))
  );
  background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%);
  background-image: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%);
  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%);
  background-image: -ms-linear-gradient(bottom, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%);
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%);
  background-size: 100% 100%;
  background-position: 0 0;
  min-height: 54px;
  min-width: 158px;
  width: auto;
  padding: 4px 4px 4px;
  margin: 0;
  top: auto;
  bottom: auto;
  left: auto;
  right: auto;
  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
}
#edit #canvas .wrapper .wrapper_overflow {
  display: block;
  position: relative;
  /*max-height: 150px;*/
  max-height: 100px;
  overflow: hidden;
  padding-bottom: 4px;
  margin: 4px 2px 14px 2px;
}
#edit #canvas .robot_canvas .wrapper .wrapper_overflow {
  max-height: 68px;
}
#edit #canvas .ability_canvas .wrapper .wrapper_overflow,
#edit #canvas .item_canvas .wrapper .wrapper_overflow {
  max-height: 90px;
  padding-right: 8px;
}
#edit #canvas .ps-container:hover>.ps-scrollbar-y-rail:hover {
  background-color: #363636;
}
#edit #canvas .ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
  background-color: #696969;
}
#edit #canvas .ps-container:hover>.ps-scrollbar-y-rail:hover>.ps-scrollbar-y {
  background-color: #969696;
}
#edit #canvas .wrapper_header {
  display: block;
  clear: both;
  margin: 0 auto 2px;
  padding: 0 6px;
  font-size: 10px;
  line-height: 16px;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.8);
  border: 1px solid #1A1A1A;
  border-radius: 0.3em;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  color: #FFFFFF;
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
}
#edit #canvas .wrapper .sort_wrapper {
  display: block;
  position: absolute;
  bottom: 3px;
  right: 3px;
  left: 3px;
  width: auto;
  height: 8px;
  text-align: center;
  padding: 2px 4px;
  font-size: 8px;
  line-height: 8px;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: #FFFFFF;
  border: 0 none transparent;
  background-color: #242424;
  -webkit-border-radius: 0 0 5px 5px;  
  -moz-border-radius: 0 0 5px 5px;
  border-radius: 0 0 5px 5px;
}
#edit #canvas .wrapper .sort_wrapper .label,
#edit #canvas .wrapper .sort_wrapper .sort {
  display: inline-block;
  position: static;
  float: none;
  font-size: 7px;
  line-height: 7px;
  text-transform: uppercase;
  letter-spacing: 1px;
  text-decoration: none;
}
#edit #canvas .wrapper .sort_wrapper .label {
  color: rgba(255, 255, 255, 0.90);
}
#edit #canvas .wrapper .sort_wrapper .sort {
  margin-left: 4px;
  color: rgba(255, 255, 255, 0.60);
  cursor: pointer;

}
#edit #canvas .wrapper .sort_wrapper .sort:hover {
  color: rgba(255, 255, 255, 0.90);
}
#edit #canvas .wrapper_left {
  /*float: left;*/
}
#edit #canvas .wrapper_right {
  /*float: left;
  margin-left: 2px;*/
}
#edit #edit_overlay {
  border-radius: 0.5em; 
  -moz-border-radius: 0.5em; 
  -webkit-border-radius: 0.5em; 
  background-color: rgba(0, 0, 0, 0.75); 
  position: absolute; 
  top: 50px; 
  left: 6px; 
  right: 6px;
  bottom: 3px; 
  height: auto; 
  z-index: 9999; 
  display: none;
}
#edit #canvas .wrapper .event {
  width: 100%;
}
#edit #canvas .sprite_robot {
  position: static;
  float: left;
  height: 24px;
  width: 22px;
  background-color: #000000;
  border: 2px solid transparent;
  border-color: transparent !important;
  border-radius: 0.25em;
  -moz-border-radius: 0.25em;
  -webkit-border-radius: 0.25em;
  margin: 0 6px 6px 0;
  background-position: -8px -12px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
  opacity: 0.30;
}
#edit #canvas .sprite_robot.notloaded {
  opacity: 0.15 !important;
}
/* ... */

